--- a/sobre.html
+++ b/sobre.html
@@ -43,7 +43,7 @@
 	<hr>
 	<table>
 		<td><span class="circle-image">
-			<img src="G:\____Documentos\FIRJAN SENAI\CURSO FRONT END\Projeto 1\Imagens\fotosammy.jpg" width="150px" height="150px" align="left">
+			<img src="\fotosammy.jpg" width="150px" height="150px" align="left">
 		</span></td>
 		<p align="left">
 		<td colspan="2"><br>
