--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<table border="1">
 			<tr>
 				<td colspan="2" width="100%" height="100px">
-					<Marquee scrolldelay="60"><img src="G:\____Documentos\FIRJAN SENAI\CURSO FRONT END\Projeto 1\Imagens\banner.png"></marquee>
+					<Marquee scrolldelay="60"><img src="\banner.png"></marquee>
 				</td>
 			</tr>
 			<tr>
